--- a/styles/components/gallery.module.css
+++ b/styles/components/gallery.module.css
@@ -122,6 +122,9 @@
   .gallery {
     max-height: 100vh;
   }
+  .commentContainer {
+    margin-bottom: 10px;
+  }
   .mediaContainer {
     max-width: 100vw;
   }
@@ -135,6 +138,7 @@
     transition: top 0.3s var(--animation-function);
     border-top-right-radius: 25px;
     border-top-left-radius: 25px;
+    max-height: 88vh;
     z-index: 10;
   }
   .dataContainerChevron {
